[package]
name = "sp-wasm-interface"
version = "4.0.0-dev"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Types and traits for interfacing between the host and the wasm runtime."
documentation = "https://docs.rs/sp-wasm-interface"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
wasmi = { version = "0.9.1", optional = true }
impl-trait-for-tuples = "0.2.1"
sp-std = { version = "4.0.0-dev", path = "../std", default-features = false }
codec = { package = "axia-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

[features]
default = [ "std" ]
std = [ "wasmi", "sp-std/std", "codec/std" ]
