[package]
name = "axlib-test-runtime-transaction-pool"
version = "2.0.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
axlib-test-runtime-client = { version = "2.0.0", path = "../client" }
parking_lot = "0.11.1"
codec = { package = "axia-scale-codec", version = "2.0.0" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
sp-runtime = { version = "4.0.0-dev", path = "../../../primitives/runtime" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../../client/transaction-pool", features = ["test-helpers"] }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../../client/transaction-pool/api" }
futures = "0.3.16"
derive_more = "0.99.16"
